Conhecendo parametros do Swagger
